# kio-admin

./: .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .kde-ci.yml  CMakeLists.txt  README.md  org.kde.kio.admin.metainfo.xml
po/ar/: kio5_admin.po  kio6_admin.po
po/be/: kio5_admin.po  kio6_admin.po
po/bg/: kio5_admin.po  kio6_admin.po
po/ca/: kio5_admin.po  kio6_admin.po
po/ca@valencia/: kio5_admin.po  kio6_admin.po
po/cs/: kio5_admin.po  kio6_admin.po
po/de/: kio5_admin.po
po/en_GB/: kio5_admin.po
po/eo/: kio5_admin.po  kio6_admin.po
po/es/: kio5_admin.po  kio6_admin.po
po/eu/: kio5_admin.po  kio6_admin.po
po/fi/: kio5_admin.po
po/fr/: kio5_admin.po  kio6_admin.po
po/ga/: kio5_admin.po  kio6_admin.po
po/gl/: kio5_admin.po
po/he/: kio5_admin.po  kio6_admin.po
po/hu/: kio6_admin.po
po/ia/: kio5_admin.po  kio6_admin.po
po/ie/: kio5_admin.po
po/is/: kio6_admin.po
po/it/: kio5_admin.po  kio6_admin.po
po/ja/: kio5_admin.po  kio6_admin.po
po/ka/: kio5_admin.po
po/ko/: kio5_admin.po
po/lt/: kio5_admin.po  kio6_admin.po
po/nan_TW@latin/: kio6_admin.po
po/nl/: kio5_admin.po
po/nn/: kio5_admin.po  kio6_admin.po
po/pl/: kio5_admin.po  kio6_admin.po
po/pt/: kio5_admin.po  kio6_admin.po
po/pt_BR/: kio5_admin.po
po/ro/: kio5_admin.po  kio6_admin.po
po/ru/: kio5_admin.po  kio6_admin.po
po/sk/: kio5_admin.po
po/sl/: kio5_admin.po  kio6_admin.po
po/sv/: kio5_admin.po  kio6_admin.po
po/tr/: kio5_admin.po
po/ug/: kio6_admin.po
po/uk/: kio5_admin.po
po/zh_CN/: kio5_admin.po  kio6_admin.po
po/zh_TW/: kio5_admin.po  kio6_admin.po
src/: CMakeLists.txt  Messages.sh  admin.json  dbustypes.cpp  dbustypes.h  posix.h  worker.cpp
src/fileaction/: CMakeLists.txt  fileaction.cpp  fileaction.json  fileaction.json.license
src/helper/: CMakeLists.txt  auth.cpp  auth.h  busobject.cpp  busobject.h  chmodcommand.cpp  chmodcommand.h  chowncommand.cpp  chowncommand.h  copycommand.cpp  copycommand.h  delcommand.cpp  delcommand.h  file.cpp  file.h  getcommand.cpp  getcommand.h  listdircommand.cpp  listdircommand.h  main.cpp  mkdircommand.cpp  mkdircommand.h  org.kde.kio.admin.conf  org.kde.kio.admin.policy  org.kde.kio.admin.service.in  putcommand.cpp  putcommand.h  renamecommand.cpp  renamecommand.h  statcommand.cpp  statcommand.h
